fixed background horizontal alignment per help

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ html, body {
     width: 100%;
     height: 100%;
     background-image: url('images/pattern-background-mobile.svg');
-    background-size: cover;
+    background-size: 100% auto; 
+    background-repeat: no-repeat;
 }
 
 .window-container {
